cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. 
    This template creates Python Flask Web Application on Amazon Linux 2023.
    The application is hosted on an EC2 instance with a security group that allows HTTP and SSH access.
    The instance is configured to run a static website using Flask, which converts numbers to Roman numerals.
    The application is accessible via web browser and terminal from anywhere.
    The application files are downloaded from Github repo and deployed on EC2 Instance using user data script within cloudformation template. 
    Roman Numerals Converter Application Website URL is given as output by Cloudformation Service, after the stack created.

    Author: hatice ilgaz

Parameters:
    KeyName:
      Description: SSH Key Pair name for EC2 login
      Type: AWS::EC2::KeyPair::KeyName
    LatestAmiId:
      Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
      Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
      
Resources:

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        
   
  WGS:
      Type: AWS::EC2::Instance
      Properties: 
        ImageId: !Ref LatestAmiId
        InstanceType: t2.micro
        KeyName: !Ref KeyName
        SecurityGroups: 
          - !Ref WebServerSecurityGroup
        Tags:
          - Key: Name
            Value: !Sub Web Server of ${AWS::StackName} Stack 
        
        UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install python3 -y
          yum install python3-pip -y
          pip3 install flask
          yum install git -y
          cd home/ec2-user
          git clone https://github.com/Haticesea/clarusway-aws-workshop.git
          cd clarusway-aws-workshop
          sudo python3 app.py 
          
         
Outputs: 
  WebsiteURL:
    Value: !Sub 
      - http://${Domain}
      - Domain: !GetAtt WGS.PublicDnsName
    Description: Roman Numerals Converter Application URL
